2006-06-23  Roger Leigh  <rleigh@debian.org>

	* schroot/Makefile.am: Build with new headers.

	* schroot/dchroot-session.h: Update API documentation.

	* schroot/schroot.cc: Include the new options headers.  The
	options object is now a tr1::shared_ptr to the base_options
	options base class.

	* schroot/dchroot-dsa-options.(cc|h): dchroot-dsa-specific options
	and parsing logic.

	* schroot/dchroot-options.(cc|h): dchroot-specific options and
	parsing logic.

	* schroot/schroot-options.(cc|h): schroot-specific options and
	parsing logic.

	* schroot/schroot-options-base.(cc|h): New files.  Base class
	containing generic options parsing functionality and common
	options.

2006-06-22  Roger Leigh  <rleigh@debian.org>

	* Update API reference.

2006-06-22  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in, schroot/dchroot.1.in,
	schroot/dchroot-dsa.1.in: Document differences in command
	arguments and chdir behaviour.

2006-06-22  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.cc: Add a --debug option to enable
	debugging messages.

	* schroot/Makefile.am
	(dchroot_SOURCES): Add dchroot-session-base.(cc|h).
	(dchroot_dsa_SOURCES): Add dchroot-session-base.(cc|h).  Use
	dchroot-dsa-session.(cc|h) instead of dchroot-session.(cc|h).

	* schroot/dchroot-dsa-session.(cc|h): New class, based upon
	dchroot::session and derived from dchroot::session_base.  Remove
	specialisations for dchroot.

	* schroot/dchroot-session.(cc|h): Derive from
	dchroot::session_base.  Remove specialisations for dchroot-dsa.

	* schroot/dchroot-session-base.(cc|h): New class, split from
	dchroot::session.  It includes functionality common to dchroot and
	dchroot-dsa sessions, as well as recording a compatibility state
	which influences session behaviour depending on whether
	dchroot.conf or schroot.conf are used.

	* schroot/schroot.cc: When building for dchroot-dsa, include the
	dchroot-dsa-session.h header.
	(main): When building for dchroot-dsa, create a